@@ -1,5 +1,10 @@
 2007-11-24  Paolo Borelli  <pborelli@katamail.com>
 
+	* gobject/gobjectmodule.c (pyg_type_register): check for NULL before
+	dereferencing.
+
+2007-11-24  Paolo Borelli  <pborelli@katamail.com>
+
 	* gobject/gobjectmodule.c (pyg_type_register): do not use a
 	potentially uninitialized variable. Bug #499334.
 
